--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if(User.IsInRole("admin"))
+                                  {
+                                    <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                                </li>
+                                  }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
