--- a/source/VotingApp/VotingApp/Views/Create/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Index.cshtml
@@ -5,27 +5,40 @@
 
 <div class="text-center">
     <h1 class="display-4">Create A New Vote</h1>
-    <hr />
+    <hr class="mb-5"/>
 </div>
-
+@if(Model == null)
+{
 <div class="text-center">
     <div class="row">
         <form asp-action="Index" method="post">
-            <div class="form-row mb-2">
+            <div class="form-row mb-5">
                 <label asp-for="VoteDiscription">Please enter your vote description in the box below (required):</label>
-                <textarea asp-for="VoteDiscription" class="form-control" type="text" rows="5"></textarea>
+                <textarea asp-for="VoteDiscription" class="form-control" type="text" rows="5" required></textarea>
                 <span asp-validation-for="VoteDiscription" class="text-danger"></span>
             </div>
-            <div class="form-row mb-2">
-                <label asp-for="VoteTypeId" class="control-label">Please choose which type of vote you would like to create</label>
-                <select asp-for="VoteTypeId" class="form-control" asp-items="ViewBag.VoteTypeId"></select>
-                <span asp-validation-for="VoteTypeId" class="text-danger"></span>
+            <div class="form-row mb-5">
+                <div class="row">
+                <div class="col">
+                    <label asp-for="VoteTypeId" class="control-label">Please choose which type of vote you would like to create:</label>
+                    <select asp-for="VoteTypeId" class="form-control" asp-items="ViewBag.VoteTypeId"></select>
+                    <span asp-validation-for="VoteTypeId" class="text-danger"></span>
+                </div>
+                    <div class="col align-self-center">
+                        
+                        <input asp-for="Anonymous" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            Is this vote anonymous?
+                        </label>
+                        
+                    </div>
+                </div>
             </div>
-            <div class="row mb-2 justify-content-center">
+            <div class="row mb-3 justify-content-center">
                 <h4><u>Voting Type Descriptions:</u></h4>
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
+                <div class="col-3 justify-content-center">
+                    <div class="card justify-content-center">
+                        <div class="card-body justify-content-center">
                             <h5 class="card-title">Yes/No Vote:</h5>
                             <p class="card-text">Voters Will get to choose between two simple options: yes or no.</p>
                         </div>
@@ -38,3 +51,50 @@
         </form>
     </div>
 </div>
+}
+else
+{
+<div class="text-center">
+    <div class="row">
+        <form asp-action="edit" method="post">
+            <input asp-for="Id" type="number" value="@Model.Id" hidden></input>
+            <div class="form-row mb-5">
+                <label asp-for="VoteDiscription">Please enter your vote description in the box below (required):</label>
+                <textarea asp-for="VoteDiscription" class="form-control" type="text" rows="5">@Model.VoteDiscription</textarea>
+                <span asp-validation-for="VoteDiscription" class="text-danger"></span>
+            </div>
+            <div class="form-row mb-5">
+                <div class="row">
+                    <div class="col">
+                        <label asp-for="VoteTypeId" class="control-label">Please choose which type of vote you would like to create:</label>
+                        <select asp-for="VoteTypeId" class="form-control" asp-items="ViewBag.VoteTypeId"></select>
+                        <span asp-validation-for="VoteTypeId" class="text-danger"></span>
+                    </div>
+                    <div class="col align-self-center">
+
+                        <input asp-for="Anonymous" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            Is this vote anonymous?
+                        </label>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-3 justify-content-center">
+                <h4><u>Voting Type Descriptions:</u></h4>
+                <div class="col-3 justify-content-center">
+                    <div class="card justify-content-center">
+                        <div class="card-body justify-content-center">
+                            <h5 class="card-title">Yes/No Vote:</h5>
+                            <p class="card-text">Voters Will get to choose between two simple options: yes or no.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+</div>
+}
