--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-12 text-left">
         <form asp-action="BackToIndexPage">
-            <button type="submit" class="btn btn-primary" value="@Model.ID" name="ID">Back</button>
+            <button type="submit" class="btn btn-primary" value="@Model.ID" name="ID">Edit</button>
         </form>
     </div>
 </div>
@@ -18,37 +18,44 @@
 </div>
 
 <div class="text-center">
-    <div class="col justify-content-center">
-        <div class="row mb-5 justify-content-center">
-            <div class="form-row mb-5">
-                <h3>Vote Description:</h3>
-                <h6>(If you would like to change your description press the back button)</h6>
-                <form asp-action="Confirmation" method="get">
-                    <div class="card">
-                        <div class="card-body">
-                            <p class="card-text">@Model.VoteDescription</p>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="row mb-5 justify-content-center">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Voting Options:</h5>
-                </div>
-                <ul class="list-group list-group-flush">
-                    @foreach (var option in Model.VotingOptions)
-                    {
-                        <li class="list-group-item">@option</li>
-                    }
-                </ul>
-            </div>
-        </div>
-        <div class="form-group">
-            <form asp-action="Confirmation" method="post">
-                <button type="submit" class="btn btn-primary">Return</button>
-            </form>
-        </div>
-    </div>
+	<div class="col justify-content-center">
+		<form asp-action="Confirmation" method="get">
+			<div class="row mb-5 justify-content-center">
+				<h3>Vote Title:</h3>
+				<h6>(If you would like to change your title press the edit button)</h6>
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text">@Model.VoteTitle</p>
+					</div>
+				</div>
+			</div>
+			<div class="row mb-5 justify-content-center">
+				<h3>Vote Description:</h3>
+				<h6>(If you would like to change your description press the edit button)</h6>
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text">@Model.VoteDescription</p>
+					</div>
+				</div>
+			</div>
+		</form>
+		<div class="row mb-5 justify-content-center">
+			<div class="card" style="width: 18rem;">
+				<div class="card-body">
+					<h5 class="card-title">Voting Options:</h5>
+				</div>
+				<ul class="list-group list-group-flush">
+					@foreach (var option in Model.VotingOptions)
+					{
+						<li class="list-group-item">@option</li>
+					}
+				</ul>
+			</div>
+		</div>
+		<div class="form-group">
+			<form asp-action="Confirmation" method="post">
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+		</div>
+	</div>
 </div>
