--- a/source/VotingApp/VotingApp/Views/Create/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Index.cshtml
@@ -9,57 +9,67 @@
 </div>
 @if(Model == null)
 {
-<div class="text-center">
-    <div class="row">
-        <form asp-action="Index" method="post">
-            <div class="form-row mb-5">
-                <label asp-for="VoteDiscription">Please enter your vote description in the box below (required):</label>
-                <textarea asp-for="VoteDiscription" class="form-control" type="text" rows="5" required></textarea>
-                <span asp-validation-for="VoteDiscription" class="text-danger"></span>
-            </div>
-            <div class="form-row mb-5">
-                <div class="row">
-                <div class="col">
-                    <label asp-for="VoteTypeId" class="control-label">Please choose which type of vote you would like to create:</label>
-                    <select asp-for="VoteTypeId" class="form-control" asp-items="ViewBag.VoteTypeId"></select>
-                    <span asp-validation-for="VoteTypeId" class="text-danger"></span>
-                </div>
-                    <div class="col align-self-center">
-                        
-                        <input asp-for="Anonymous" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            Is this vote anonymous?
-                        </label>
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-3 justify-content-center">
-                <h4><u>Voting Type Descriptions:</u></h4>
-                <div class="col-3 justify-content-center">
-                    <div class="card justify-content-center">
-                        <div class="card-body justify-content-center">
-                            <h5 class="card-title">Yes/No Vote:</h5>
-                            <p class="card-text">Voters Will get to choose between two simple options: yes or no.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>
-    </div>
-</div>
+	<div class="text-center">
+		<div class="row">
+			<form asp-action="Index" method="post">
+				<div class="form-row mb-5">
+					<label asp-for="VoteTitle">Please enter your vote title in the box below (required): <span data-toggle="tooltip" data-placement="bottom" title="This will be the title of the vote you are going to create. It will give voters a general idea about what they are voting on. If you have an account you will also be able to see a list of previous voting results organized by this vote title.">&#8505;</span></label>
+					<textarea asp-for="VoteTitle" class="form-control" type="text" rows="1" required ></textarea>
+					<span asp-validation-for="VoteTitle" class="text-danger"></span>
+				</div>
+				<div class="form-row mb-5">
+					<label asp-for="VoteDiscription">Please enter your vote description in the box below (required): <span data-toggle="tooltip" data-placement="bottom" title="The vote description is to give users a better idea about why/what they are voting about. If it's a yes/no vote you can use this description to explain to the user what the yes stands for and what the no stands for. Here you can let the users know if there will be a time limit on this vote as well, and more details such as if it will be completely anonymous for even the vote creator to see the results of how individuals voted.">&#8505;</span></label>
+					<textarea asp-for="VoteDiscription" class="form-control" type="text" rows="5" required></textarea>
+					<span asp-validation-for="VoteDiscription" class="text-danger"></span>
+				</div>
+				<div class="form-row mb-5">
+					<div class="row">
+						<div class="col">
+							<label asp-for="VoteTypeId" class="control-label">Please choose which type of vote you would like to create:</label>
+							<select asp-for="VoteTypeId" class="form-control" asp-items="ViewBag.VoteTypeId"></select>
+							<span asp-validation-for="VoteTypeId" class="text-danger"></span>
+						</div>
+						<div class="col align-self-center">
+
+							<input asp-for="Anonymous" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+							<label class="form-check-label" for="flexCheckDefault">
+								Is this vote anonymous? <span data-toggle="tooltip" data-placement="bottom" title="Check this anonymous button if you just want the overall results of the vote where individual user votes will be kept anonymous.">&#8505;</span>
+							</label>
+
+						</div>
+					</div>
+				</div>
+				<div class="row mb-3 justify-content-center">
+					<h4><u>Voting Type Descriptions:</u></h4>
+					<div class="col-3 justify-content-center">
+						<div class="card justify-content-center">
+							<div class="card-body justify-content-center">
+								<h5 class="card-title">Yes/No Vote:</h5>
+								<p class="card-text">Voters Will get to choose between two simple options: yes or no.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-primary">Review</button>
+				</div>
+			</form>
+		</div>
+	</div>
 }
 else
 {
 <div class="text-center">
     <div class="row">
         <form asp-action="edit" method="post">
-            <input asp-for="Id" type="number" value="@Model.Id" hidden></input>
+	        <input asp-for="Id" type="number" value="@Model.Id" hidden></input>
+	        <div class="form-row mb-5">
+		        <label asp-for="VoteTitle">Please enter your vote title in the box below (required): <span data-toggle="tooltip" data-placement="bottom" title="This will be the title of the vote you are going to create. It will give voters a general idea about what they are voting on. If you have an account you will also be able to see a list of previous voting results organized by this vote title.">&#8505;</span></label>
+		        <textarea asp-for="VoteTitle" class="form-control" type="text" rows="1">@Model.VoteTitle</textarea>
+		        <span asp-validation-for="VoteTitle" class="text-danger"></span>
+	        </div>
             <div class="form-row mb-5">
-                <label asp-for="VoteDiscription">Please enter your vote description in the box below (required):</label>
+                <label asp-for="VoteDiscription">Please enter your vote description in the box below (required): <span data-toggle="tooltip" data-placement="bottom" title="The vote description is to give users a better idea about why/what they are voting about. If it's a yes/no vote you can use this description to explain to the user what the yes stands for and what the no stands for. Here you can let the users know if there will be a time limit on this vote as well, and more details such as if it will be completely anonymous for even the vote creator to see the results of how individuals voted.">&#8505;</span></label>
                 <textarea asp-for="VoteDiscription" class="form-control" type="text" rows="5">@Model.VoteDiscription</textarea>
                 <span asp-validation-for="VoteDiscription" class="text-danger"></span>
             </div>
@@ -74,7 +84,7 @@ else
 
                         <input asp-for="Anonymous" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
-                            Is this vote anonymous?
+                            Is this vote anonymous? <span data-toggle="tooltip" data-placement="bottom" title="Check this anonymous button if you just want the overall results of the vote where individual user votes will be kept anonymous.">&#8505;</span>
                         </label>
 
                     </div>
@@ -86,13 +96,13 @@ else
                     <div class="card justify-content-center">
                         <div class="card-body justify-content-center">
                             <h5 class="card-title">Yes/No Vote:</h5>
-                            <p class="card-text">Voters Will get to choose between two simple options: yes or no.</p>
+                            <p class="card-text">Voters will get to choose between two simple options: yes or no.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Review</button>
             </div>
         </form>
     </div>
