--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index">Create A Vote</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index">Create A Vote</a>
+                        </li>
                         @if(User.IsInRole("admin"))
                         {
                             <li class="nav-item">
