--- a/source/VotingApp/VotingApp/Views/Create/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Index.cshtml
@@ -49,7 +49,7 @@
 						</div>
 						<div class="col align-self-center">
 
-							<input asp-for="Anonymous" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+							<input asp-for="AnonymousVote" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
 							<label class="form-check-label" for="flexCheckDefault">
 								Is this vote anonymous? <span data-toggle="tooltip" data-placement="bottom" title="Check this anonymous button if you just want the overall results of the vote where individual user votes will be kept anonymous.">&#8505;</span>
 							</label>
