edited database again, added yes/no to database when vote gets created, added admin page to see all votes, added 6 digit code to database and in created vote

--- a/source/VotingApp/VotingApp/Views/Admin/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Admin/Index.cshtml
@@ -3,3 +3,11 @@
 }
 <h1>Admin Page</h1>
 <h3>Welcome to the admin page. Only admin can see this page</h3>
+<div class="row">
+    <div class="col">
+        <h4>View Created Votes in System</h4>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewAll">View Votes</a>
+    </div>
+</div>
+
+    
