--- a/source/VotingApp/VotingApp/Views/Access/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/Index.cshtml
@@ -10,7 +10,7 @@
 <form asp-action="Access" method="get" class="col-lg-6 offset-lg-3 ">
     <div class="row justify-content-center text-center">
         <label>Enter the access code for the vote:</label>
-        <input class="form-control" type="number" name="code"/>
+        <input class="form-control" type="text" name="code" min="6" max="6"/>
         <span class="input-group-btn">
             <button type="submit" class="btn">Submit</button>
         </span>
