--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -15,13 +15,13 @@
 <form asp-action="CastVote" method="get" class="col-lg-6 offset-lg-3 ">
     <div class="row justify-content-center text-center">
         <h4>Vote Options:</h4>
-        @foreach (var a in Model.options)
+        @foreach (var a in Model.vote.VoteOptions)
         {
             <div class="row justify-content-center text-center">
                 <div class="form-chec justify-content-center text-center" >
-                    <input class="form-check-input" type="radio" value="@a" name="choice" id="flexRadioDefault1">
+                    <input class="form-check-input" type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
                     <label class="form-check-label" for="flexRadioDefault1" >
-                        @a
+                        @a.VoteOptionString
                     </label>
                 </div>
             </div>
