added ability to cast a new vote with or without being logged in added access code to confirmation page.

--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -32,6 +32,14 @@
 						</div>
 					</div>
 					<div class="row mb-4 justify-content-center">
+						<h3>Vote Access Code:</h3>
+						<div class="card col-md-6 mx-auto">
+							<div class="card-body">
+								<p class="card-text text-black">@Model.VoteAccessCode</p>
+							</div>
+						</div>
+					</div>
+					<div class="row mb-4 justify-content-center">
 						<h3>Vote Description:</h3>
 						<h6>(If you would like to change your description press the edit button)</h6>
 						<div class="card col-md-6 mx-auto">
