--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -13,6 +13,7 @@
 </div>
 
 <form asp-action="CastVote" method="get" class="col-lg-6 offset-lg-3 ">
+    <input name="voteID" value="@Model.vote.Id" type="number" hidden/>
     <div class="row justify-content-center text-center">
         <h4>Vote Options:</h4>
         @foreach (var a in Model.vote.VoteOptions)
