checking for conflicts

--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -49,7 +49,7 @@
 						<ul class="list-group list-group-flush">
 							@foreach (var option in Model.VotingOptions)
 							{
-								<li class="list-group-item">@option</li>
+								<li class="list-group-item">@option.VoteOptionString</li>
 							}
 						</ul>
 					</div>
