--- a/source/VotingApp/VotingApp/Views/Create/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Index.cshtml
@@ -67,6 +67,14 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-3 justify-content-center">
+						<div class="card justify-content-center">
+							<div class="card-body justify-content-center">
+								<h5 class="card-title text-black">Multiple Choice Vote:</h5>
+								<p class="card-text text-black">Vote creators will get to enter their own multiple choice voting options (2-10 options). Voters will then get to choose one option from those created voting options.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-light btn-lg bg-success btn-outline-primary">Review</button>
