--- a/source/VotingApp/VotingApp/Views/Access/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/Index.cshtml
@@ -2,17 +2,28 @@
 @{
     ViewData["Title"] = "Access Page";
 }
-
+<div class="jumbotron jumbotron-fluid full-width" style="margin-bottom: 0px; 
+                                                         height: 90vh; 
+                                                         background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1)), url(/Images/bannerImage2.jpg); 
+                                                         background-size: cover; 
+                                                         left: 50%;
+                                                         margin-left: -50vw;
+                                                         margin-right: -50vw;
+                                                         max-width: 100vw;
+                                                         position: relative;
+                                                         right: 50%;
+                                                         width: 100vw;">
 <div class="text-center mt-3">
-    <h1 class="display-4">Access a Vote</h1>
+    <h1 class="display-4 text-white">Access a Vote</h1>
     <hr class="mb-5"/>
 </div>
 <form asp-action="Access" method="get" class="col-lg-6 offset-lg-3 ">
     <div class="row justify-content-center text-center">
-        <label>Enter the access code for the vote:</label>
+        <label class="text-white">Enter the access code for the vote:</label>
         <input class="form-control" type="text" name="code" min="6" max="6"/>
         <span class="input-group-btn">
-            <button type="submit" class="btn">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </span>
     </div>
 </form>
+</div>
