Finished VA-21 and VA-21, all items have testing completed, UI is tested to the best that I can

--- a/source/VotingApp/VotingApp/Views/Access/SubmitConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitConfirmation.cshtml
@@ -13,7 +13,27 @@
     position: relative;
     right: 50%;
     width: 100vw;"> 
-    <div class="text-center text-white">
-
+    
+    <div class="text-center text-white pt-5">
+        <h1 class="display-4 mb-5"><strong>Thank you for casting a vote!</strong></h1>
+        <h2>Vote Title:</h2>
+        <h3>@Model.createdVote.VoteTitle</h3>
+        <h2 class="mt-5">Vote Description:</h2>
+        <h3>@Model.createdVote.VoteDiscription</h3>
+        <h2 class="mt-5">Vote Options:</h2>
+        <ul>
+            @foreach (var option in Model.createdVote.VoteOptions)
+            {
+                <li>@option.VoteOptionString</li>
+            }
+        </ul>
     </div>
+    <div class="text-center text-white mt-5">
+        <h2>Your Choice:</h2>
+        <h3 class="mb-5">@Model.votingOption.VoteOptionString</h3>
+        <form asp-controller="Home" asp-action="Index">
+            <button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary">Home</button>
+        </form>
+    </div>
+    
 </div>
