--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index">Create A Vote</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index">Access A Vote</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index">Submit A Vote</a>
                         </li>
                         <li>
 		                    <a class="nav-link text-dark" asp-area="" asp-controller="Help" asp-action="Index">Help</a>
