--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -7,12 +7,20 @@
     <div class="text-center pt-3 text-white">
         <h1 class="display-4">Cast Vote</h1>
         <hr class="mb-5"/>
+        <h3 class="text-white">Title:</h3>
+        <p class="text-white">@Model.vote.VoteTitle</p>
         <h4 class="text-white">Description:</h4>
         <p class="text-white">@Model.vote.VoteDiscription</p>
     </div>
     <form asp-action="CastVote" method="get" class="col-lg-6 offset-lg-3 ">
         <input name="voteID" value="@Model.vote.Id" type="number" hidden/>
         <div class="row justify-content-center text-center">
+            @if (ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-danger">
+                    <p>@ViewBag.ErrorMessage</p>
+                </div>
+            }
             <h4 class="text-white">Vote Options:</h4>
             @foreach (var a in Model.vote.VoteOptions)
             {
