--- a/source/VotingApp/VotingApp/Views/Admin/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Admin/Index.cshtml
@@ -1,13 +1,19 @@
 ﻿@{
     ViewData["Title"] = "VotingApp - Admin Page";
 }
-<h1>Admin Page</h1>
-<h3>Welcome to the admin page. Only admin can see this page</h3>
-<div class="row">
-    <div class="col">
-        <h4>View Created Votes in System</h4>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewAll">View Votes</a>
+<div class="jumbotron jumbotron-fluid full-width" style="margin-bottom: 0px; height: 90vh; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1)), url(/Images/bannerImage5.jpg); background-size: cover; left: 50%; margin-left: -50vw; margin-right: -50vw; max-width: 100vw; position: relative; right: 50%; width: 100vw;">
+<div class="container">
+    <h1 class=" text-white pt-4">Admin Page</h1>
+    <h3 class="text-white">Welcome to the admin page. Only admin can see this page</h3>
+    <div class="row">
+        <div class="col justify-content-center text-center mt-5">
+            <h4 class="text-white">View Created Votes in System</h4>
+            <form asp-area="" asp-controller="Admin" asp-action="ViewAll">
+                <button class="btn btn-primary" type="submit">View Votes</button>
+            </form>
+
+        </div>
     </div>
 </div>
 
-    
+</div>
