--- a/source/VotingApp/VotingApp/Views/Admin/ViewAll.cshtml
+++ b/source/VotingApp/VotingApp/Views/Admin/ViewAll.cshtml
@@ -4,12 +4,26 @@
 *@
 @{
 }
+<div class="pt-3 row justify-content-center ">
 
     @foreach (var vote in Model)
     {
+        <div class="col-xl-5 mb-3" style="height:100%;">
         <div class="card">
             <div class="card-header">
-                <h3>@vote.VoteTitle - @vote.VoteType.VotingType</h3>
+                @if (vote.UserId != null)
+                {
+                    <h3>Vote Id:@vote.Id</h3>
+                    <h3>Vote Title:@vote.VoteTitle</h3>
+                    <h3>Vote Type:@vote.VoteType.VotingType</h3>
+                    <h3>UserId:@vote.UserId</h3>
+                }
+                else
+                {
+                    <h3>Vote Id:@vote.Id</h3>
+                    <h3>Vote Title:@vote.VoteTitle</h3>
+                    <h3>Vote Type:@vote.VoteType.VotingType</h3>
+                }
             </div>
             <div class="card-body">
                 <p>@vote.VoteDiscription</p>
@@ -25,8 +39,9 @@
                 <form asp-action="Delete" method="get"><input name="id" type="number" value="@vote.Id" hidden/><button class="btn btn-danger" type="submit" asp-action="Delete" value="@vote.Id">Delete</button></form>
             </div>
         </div>
-        
-        
-        
+
+
+        </div>
     }
 
+</div>
