--- a/source/VotingApp/VotingApp/Views/Home/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Home/Index.cshtml
@@ -19,7 +19,11 @@
         <div class="row" style="padding-top: 5%";>
             <div class="col text-center">
                 <h3 class="h3">Create A Vote:</h3>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Create</button></a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Create Vote</button></a>
+            </div>
+            <div class="col text-center">
+                <h3 class="h3">Submit A Vote:</h3>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Cast A Vote</button></a>
             </div>
         </div>
     </div>
