--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -32,11 +32,14 @@
 						</div>
 					</div>
 					<div class="row mb-4 justify-content-center">
-						<h3>Vote Access Code:</h3>
+						<h3>Share Vote:</h3>
 						<div class="card col-md-6 mx-auto">
-							<div class="card-body">
-								<p class="card-text text-black">@Model.VoteAccessCode</p>
-							</div>
+                            <div class="card-body">
+                                <h3 class="text-black">Vote Title:</h3>
+                                <p class="card-text text-black">@Model.VoteAccessCode</p>
+                                <h3 class="text-black">Vote Link:</h3>
+                                <p class="card-text text-black">@Model.ShareURL</p>
+                            </div>
 						</div>
 					</div>
 					<div class="row mb-4 justify-content-center">
