edit Regiter Confirmation page wording 1. changed title from Register Confirmation to Registration Confirmation 2. changed text on page to a more customized message for the app

--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Registration confirmation";
 }
 
 <div class="jumbotron jumbotron-fluid full-width" style="margin-bottom: 0px;
@@ -30,7 +30,7 @@
     else
     {
 <p>
-        Please check your email to confirm your account.
+        We're happy you've registered to use Opiniony! Please check your email for a verification link to confirm your account. 
 </p>
     }
 }
