change to message 1. let user know about 24 hour time period to confirm, and ability to resend 2. inserted user's email address in message, so they can see where the message is being sent

--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -29,8 +29,9 @@
     }
     else
     {
-<p>
-        We're happy you've registered to use Opiniony! Please check your email for a verification link to confirm your account. 
+<p> 
+        We're happy that you've registered to use Opiniony! Please check your @Model.Email email for a verification link to confirm your account. <br/>
+        You have 24 hours to confirm your account, but if you are unable to confirm within that time period, you can have the email resent.
 </p>
     }
 }
