--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -23,15 +23,16 @@
 
     @if (Model != null)
     {
-        <div class="text-center text-white">    
-            <div class="text-center col-md-8 mx-auto">
+	    <div class="container text-center text-white" >
+		    <div class="text-center col-md mx-auto">
 
                 <table class="table table-borderless rounded bg-dark text-white table-striped">
                     <tr class="bg-secondary">
                         <th class="text-center">#</th>
                         <th>Title</th>
                         <th>Description</th>
-                        <th>Voting Type</th>
+	                    <th>Voting Type</th>
+	                    <th>Anonymous</th>
                         <th>Access Code</th>
                         <th>Access Link</th>
 	                    <th>&nbsp;</th>
@@ -46,7 +47,8 @@
                         <tr class="text-white-50">
                             <td>@i</td><td id="Title-@createdVote.Id">@createdVote.VoteTitle</td>
                             <td id="Desc-@createdVote.Id">@createdVote.VoteDiscription</td>
-                            <td >@createdVote.VoteType.VotingType</td>
+	                        <td >@createdVote.VoteType.VotingType</td>
+	                        <td>@createdVote.AnonymousVote</td>
                             <td>@createdVote.VoteAccessCode</td>
                             <td>@Html.Raw($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.PathBase}/Access/{createdVote.VoteAccessCode}")</td>
 	                        <td ><button type="button" data-toggle="modal" data-target="#editModal" style="width:70px !important" class="btn btn-light bg-success btn-outline-primary" name="edit-button" value=@createdVote.Id onclick="FillValues('@createdVote.Id')">Edit</button></td>
