finished user authorization, and remapped edit button on vote review page

--- a/source/VotingApp/VotingApp/Views/Create/AddVoteUsers.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/AddVoteUsers.cshtml
@@ -26,7 +26,7 @@
             <div class="row justify-content-center">
             <div class="col-5">
             <div class="form-group">
-                        <input class="form-control col-form-label-lg" name="userListString" type="email" multiple value="@(Model.emails == null ? "" : Model.emails)"/>
+                        <input required class="form-control col-form-label-lg" name="userListString" type="email" multiple value="@(Model.emails == null ? "" : Model.emails)"/>
                             
                     </div>
              <div class="form-group pt-3">
