--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -53,8 +53,18 @@
                             <td>@createdVote.VoteAccessCode</td>
                             <td>@Html.Raw($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.PathBase}/Access/{createdVote.VoteAccessCode}")</td>
                             <td>@if(createdVote.VoteCloseDateTime != null){@Html.Raw($"{createdVote.VoteCloseDateTime.Value.Month}/{createdVote.VoteCloseDateTime.Value.Day}/{createdVote.VoteCloseDateTime.Value.Year} {createdVote.VoteCloseDateTime.Value.TimeOfDay.ToString("hh\\:mm")}")}</td>
-	                        <td ><button type="button" data-toggle="modal" data-target="#editModal" style="width:70px !important" class="btn btn-light bg-success btn-outline-primary" name="edit-button" value=@createdVote.Id onclick="FillValues('@createdVote.Id')">Edit</button></td>
-	                       
+	                        <!--<td ><button type="button" data-toggle="modal" data-target="#editModal" style="width:70px !important" class="btn btn-light bg-success btn-outline-primary" name="edit-button" value=@createdVote.Id onclick="FillValues('@createdVote.Id')">Edit</button></td>-->
+	                       @if((createdVote.VoteOpenDateTime == null || createdVote.VoteOpenDateTime >= DateTime.Now) && createdVote.VoteCloseDateTime >= DateTime.Now)
+                            {
+                                <form asp-action="BackToIndexPage" method="post">
+		                        <td><button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary" name="ID" value="@createdVote.Id">Edit</button></td>
+	                            </form>
+                                
+                            }
+                            else
+                            {
+                                <td><button style="width:140px !important" class="btn btn-light bg-success btn-outline-primary disabled" name="id" value="@createdVote.Id" disabled>Edit</button></td>
+                            }
 	                        <form asp-action="VoteResultsButton" method="post">
 		                        <td><button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary" name="id" value="@createdVote.Id">Vote Results</button></td>
 	                        </form>
